5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1601_820.log
== TEST (2019-03-25 18:23:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas50 = valor // 50 
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = VALOR // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    resto50 = valor % 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = VAR // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = VAR % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:26:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = VAR // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = VAR % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.194502
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:19:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = VAR // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = VAR % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.145518
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:31:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = VAR // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = VAR % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.153104
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
